browser/themes/shared/incontentprefs/preferences.inc.css
/* ... */
.
tip
-
caption
{
font
-
size
:
.
9em
;
}
menulist
>
hbox
>
label
menuitem
>
label
button
>
hbox
>
label
{
line
-
height
:
unset
;
}
.
indent
{
margin
-
inline
-
start
:
28px
!
important
;
}
.
checkbox
-
check
{
margin
-
inline
-
end
:
8px
;
width
:
20px
;
height
:
20px
;
}
.
tail
-
with
-
learn
-
more
{
margin
-
inline
-
start
:
0px
;
margin
-
inline
-
end
:
10px
;
}
/
*
Add
a
bit
of
space
to
the
end
of
descriptions
to
*
leave
margin
with
e
.
g
.
additional
buttons
on
the
side
.
*
/
.
description
-
with
-
side
-
element
{
margin
-
inline
-
end
:
10px
!
important
;
}
.
learnMore
{
margin
-
inline
-
start
:
0px
;
font
-
weight
:
normal
;
white
-
space
:
nowrap
;
}
.
accessory
-
button
{
height
:
30px
;
min
-
width
:
150px
;
margin
:
4px
0
;
}
.
spotlight
{
background
-
color
:
rgba
(
0
200
215
0
.
3
)
;
/
*
Show
the
border
to
spotlight
the
components
in
high
-
contrast
mode
.
*
/
border
:
1px
solid
transparent
;
border
-
radius
:
2px
;
}
[
data
-
subcategory
]
{
margin
-
left
:
-
4px
;
margin
-
right
:
-
4px
;
padding
-
left
:
4px
;
padding
-
right
:
4px
;
}
[
data
-
subcategory
]
>
.
groupbox
-
title
{
padding
-
inline
-
start
:
4px
;
}
.
ac
-
site
-
icon
{
display
:
-
moz
-
box
;
}
/
*
Subcategory
title
*
/
/
*
*
*
The
first
subcategory
title
for
each
category
should
not
have
margin
-
top
.
*
/
.
subcategory
:
not
(
[
hidden
]
)
~
.
subcategory
{
margin
-
top
:
16px
;
padding
-
top
:
16px
;
border
-
top
:
1px
solid
rgba
(
12
12
13
0
.
15
)
;
}
/
*
Category
List
*
/
#
categories
>
scrollbox
{
overflow
:
visible
!
important
;
/
*
Cancel
scrollbar
and
do
not
clip
overflow
content
when
window
size
goes
very
small
*
/
}
#
categories
>
scrollbox
>
box
{
padding
:
1px
;
/
*
Adding
padding
around
richlistitem
in
order
to
make
entire
keyboard
focusing
outline
visible
*
/
}
#
category
-
general
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
preferences
/
in
-
content
/
general
.
svg
"
)
;
}
#
category
-
home
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
home
.
svg
"
)
;
}
#
category
-
search
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
preferences
/
in
-
content
/
search
.
svg
"
)
;
}
#
category
-
privacy
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
preferences
/
in
-
content
/
privacy
-
security
.
svg
"
)
;
}
#
category
-
sync
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
preferences
/
in
-
content
/
sync
.
svg
"
)
;
}
/
*
header
*
/
.
header
{
display
:
flex
;
align
-
items
:
center
;
justify
-
content
:
space
-
between
;
}
.
header
[
hidden
=
true
]
{
display
:
none
;
}
/
*
General
Pane
*
/
#
isDefaultLabel
{
font
-
weight
:
600
;
}
#
startupPageBox
{
padding
-
top
:
32px
;
}
.
extension
-
controlled
-
icon
{
height
:
20px
;
margin
:
2px
0
6px
;
vertical
-
align
:
middle
;
width
:
20px
;
}
.
extension
-
controlled
-
disabled
{
-
moz
-
context
-
properties
:
fill
fill
-
opacity
stroke
-
opacity
;
color
:
GrayText
;
fill
:
currentColor
;
fill
-
opacity
:
1
;
stroke
-
opacity
:
1
;
}
.
extension
-
controlled
-
disabled
>
.
extension
-
controlled
-
button
{
display
:
none
;
}
.
extension
-
controlled
-
icon
.
close
-
icon
{
height
:
30px
;
width
:
30px
;
margin
-
inline
-
start
:
5px
;
}
#
getStarted
{
font
-
size
:
90
%
;
}
#
downloadFolder
{
margin
-
inline
-
start
:
0
;
}
#
updateApp
>
.
groupbox
-
body
>
label
{
margin
:
0
0
4px
;
}
#
updateApp
>
.
groupbox
-
body
>
description
{
margin
:
0
;
}
#
updateBox
{
margin
-
top
:
4px
;
margin
-
bottom
:
32px
;
}
#
updateDeck
>
hbox
>
button
{
margin
-
top
:
0
;
margin
-
bottom
:
0
;
margin
-
inline
-
end
:
0
;
}
#
updateDeck
>
hbox
>
label
{
-
moz
-
box
-
flex
:
1
;
}
#
manualLink
{
margin
-
inline
-
start
:
6px
!
important
;
}
#
updateRadioGroup
>
radio
#
browserStartupPage
>
radio
{
height
:
30px
;
margin
:
2px
0
;
}
#
filter
{
margin
:
4px
0
8px
;
}
#
handlersView
{
height
:
25em
;
margin
-
inline
-
end
:
0
;
}
#
handlersView
>
richlistitem
{
min
-
height
:
30px
!
important
;
}
#
handlersView
>
richlistitem
>
hbox
>
hbox
>
menulist
{
margin
-
top
:
0
;
margin
-
bottom
:
0
;
margin
-
inline
-
end
:
0
;
min
-
height
:
0
;
}
.
typeIcon
{
margin
-
inline
-
start
:
10px
!
important
;
margin
-
inline
-
end
:
9px
!
important
;
}
.
actionIcon
{
margin
-
inline
-
start
:
11px
!
important
;
margin
-
inline
-
end
:
8px
!
important
;
}
.
actionsMenu
{
min
-
height
:
36px
;
}
.
actionsMenu
>
menupopup
>
menuitem
{
padding
-
inline
-
start
:
10px
!
important
;
}
.
actionsMenu
>
menupopup
>
menuitem
>
.
menu
-
iconic
-
left
{
margin
-
inline
-
end
:
8px
!
important
;
}
/
*
Home
Pane
*
/
#
homepageGroup
menulist
#
homepageGroup
textbox
{
margin
:
5px
0
;
}
#
homepageGroup
:
-
moz
-
locale
-
dir
(
rtl
)
input
{
unicode
-
bidi
:
plaintext
;
direction
:
rtl
;
}
.
homepage
-
button
:
first
-
of
-
type
{
margin
-
inline
-
start
:
0
;
}
.
homepage
-
button
:
last
-
of
-
type
{
margin
-
inline
-
end
:
0
;
}
/
*
Search
Pane
*
/
#
engineList
{
margin
:
2px
0
5px
;
}
#
engineList
>
treechildren
:
:
-
moz
-
tree
-
image
(
engineShown
checked
)
#
blocklistsTree
>
treechildren
:
:
-
moz
-
tree
-
image
(
selectionCol
checked
)
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
check
.
svg
"
)
;
-
moz
-
context
-
properties
:
fill
stroke
;
fill
:
#
2292d0
;
stroke
:
none
;
width
:
21px
;
height
:
21px
;
}
#
engineList
>
treechildren
:
:
-
moz
-
tree
-
image
(
engineShown
checked
selected
)
#
blocklistsTree
>
treechildren
:
:
-
moz
-
tree
-
image
(
selectionCol
checked
selected
)
{
fill
:
white
;
stroke
:
#
0095dd
;
}
#
engineList
>
treechildren
:
:
-
moz
-
tree
-
row
#
blocklistsTree
>
treechildren
:
:
-
moz
-
tree
-
row
{
min
-
height
:
36px
;
}
#
selectionCol
{
min
-
width
:
26px
;
}
#
addEnginesBox
{
margin
:
4px
0
0
;
}
/
*
Privacy
Pane
*
/
#
formAutofillGroup
{
margin
-
top
:
28px
;
}
/* ... */

